fix horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,25 +8,24 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.main {
-  position: relative;
-}
 .section {
   display: inline-block;
-  width: 550px;
+  width: 500px;
   min-height: 10vh;
-  margin-top: 10px;
   padding: 20px;
+  margin: 10px;
   text-align: left;
+  overflow: hidden;
+  overflow-x: hidden;
 }
 .card-one {
-  left: 10px;
+  margin-right: 80px;
 }
 .card-two {
-  left: 650px;
+  margin-left: 80px;
 }
 .card-three {
-  right: 10px;
+  margin-left: 150px;
 }
 .relative {
   position: relative;
@@ -53,16 +52,15 @@
   position: absolute;
   right: -100px;
   top: -70px;
-  width: 260px;
-  height: 260px;
+  width: 240px;
+  height: 240px;
   border-radius: 50%;
   background-color: #fff;
   opacity: 0.2;
   transition: margin-right 200ms linear;
 }
 .title:hover::after,
-.percentage:hover::after
-{
+.percentage:hover::after {
   margin-right: 100px;
 }
 .price {
@@ -73,14 +71,14 @@
   margin-bottom: 50px;
   font-size: 21px;
 }
-.percentage::after{
+.percentage::after {
   content: "";
   display: inline-block;
   position: absolute;
-  width: 300px;
-  height: 300px;
-  right: -20px;
-  bottom: -130px;
+  width: 280px;
+  height: 280px;
+  right: -40px;
+  bottom: -120px;
   border-radius: 50%;
   background-color: #fff;
   opacity: 0.2;
